--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <i class="fas fa-map-marker-alt"></i>
           <div class="topic">Address</div>
           <div class="text-one">Surkhet, NP12</div>
-          <div class="text-two">Birendranagar 06</div>
+          <div class="text-two">Eastnagar 06</div>
         </div>
         <div class="phone details">
           <i class="fas fa-phone-alt"></i>
@@ -28,13 +28,13 @@
         <div class="email details">
           <i class="fas fa-envelope"></i>
           <div class="topic">Email</div>
-          <div class="text-one">codinglab@gmail.com</div>
-          <div class="text-two">info.codinglab@gmail.com</div>
+          <div class="text-one">abc@gmail.com</div>
+          <div class="text-two">info.abc@gmail.com</div>
         </div>
       </div>
       <div class="right-side">
         <div class="topic-text">Send us a message</div>
-        <p>If you have any work from me or any types of quries related to my tutorial, you can send me message from here. It's my pleasure to help you.</p>
+        <p>If you have any work from me or any types of quries related, you can send me message from here. It's my pleasure to help you.</p>
       <form action="#">
         <div class="input-box">
           <input type="text" placeholder="Enter your name">
